v6.0.0/_sources/plugins/environment_variables.rst.txt
:orphan:

.. meta::
  :antsibull-docs: 2.27.0

.. _list_of_collection_env_vars:

Index of all Collection Environment Variables
=============================================

The following index documents all environment variables declared by plugins in collections.
Environment variables used by the ansible-core configuration are documented in :ref:`ansible_configuration_settings`.

.. envvar:: ANSIBLE_INVENTORY_CACHE

    Toggle to enable/disable the caching of the inventory's source data, requires a cache plugin setup to work.

    *Used by:*
    :ansplugin:`theforeman.foreman.foreman inventory plugin <theforeman.foreman.foreman#inventory>`
.. envvar:: ANSIBLE_INVENTORY_CACHE_CONNECTION

    Cache connection data or path, read cache plugin documentation for specifics.

    *Used by:*
    :ansplugin:`theforeman.foreman.foreman inventory plugin <theforeman.foreman.foreman#inventory>`
.. envvar:: ANSIBLE_INVENTORY_CACHE_PLUGIN

    Cache plugin to use for the inventory's source data.

    *Used by:*
    :ansplugin:`theforeman.foreman.foreman inventory plugin <theforeman.foreman.foreman#inventory>`
.. envvar:: ANSIBLE_INVENTORY_CACHE_PLUGIN_PREFIX

    Prefix to use for cache plugin files/tables.

    *Used by:*
    :ansplugin:`theforeman.foreman.foreman inventory plugin <theforeman.foreman.foreman#inventory>`
.. envvar:: ANSIBLE_INVENTORY_CACHE_TIMEOUT

    Cache duration in seconds.

    *Used by:*
    :ansplugin:`theforeman.foreman.foreman inventory plugin <theforeman.foreman.foreman#inventory>`
.. envvar:: ANSIBLE_INVENTORY_USE_EXTRA_VARS

    Merge extra vars into the available variables for composition (highest precedence).

    *Used by:*
    :ansplugin:`theforeman.foreman.foreman inventory plugin <theforeman.foreman.foreman#inventory>`
.. envvar:: FOREMAN_CALLBACK_DISABLE

    Toggle to make the callback plugin disable itself even if it is loaded.

    It can be set to '1' to prevent the plugin from being used even if it gets loaded.

    *Used by:*
    :ansplugin:`theforeman.foreman.foreman callback plugin <theforeman.foreman.foreman#callback>`
.. envvar:: FOREMAN_DIR_STORE

    When set, callback does not perform HTTP calls but stores results in a given directory.

    For each report, new file in the form of SEQ\_NO\-hostname.json is created.

    For each facts, new file in the form of SEQ\_NO\-hostname.json is created.

    The value must be a valid directory.

    This is meant for debugging and testing purposes.

    When set to blank (default) this functionality is turned off.

    *Used by:*
    :ansplugin:`theforeman.foreman.foreman callback plugin <theforeman.foreman.foreman#callback>`
.. envvar:: FOREMAN_PASSWORD

    Password of the user accessing the Foreman server.

    *Used by:*
    :ansplugin:`theforeman.foreman.foreman inventory plugin <theforeman.foreman.foreman#inventory>`
.. envvar:: FOREMAN_PROXY_URL

    URL of the Foreman Smart Proxy server.

    *Used by:*
    :ansplugin:`theforeman.foreman.foreman callback plugin <theforeman.foreman.foreman#callback>`
.. envvar:: FOREMAN_REPORT_TYPE

    endpoint type for reports: foreman or proxy

    *Used by:*
    :ansplugin:`theforeman.foreman.foreman callback plugin <theforeman.foreman.foreman#callback>`
.. envvar:: FOREMAN_SERVER

    URL of the Foreman server.

    *Used by:*
    :ansplugin:`theforeman.foreman.foreman callback plugin <theforeman.foreman.foreman#callback>`,
    :ansplugin:`theforeman.foreman.foreman inventory plugin <theforeman.foreman.foreman#inventory>`
.. envvar:: FOREMAN_SERVER_URL

    URL of the Foreman server.

    *Used by:*
    :ansplugin:`theforeman.foreman.foreman callback plugin <theforeman.foreman.foreman#callback>`,
    :ansplugin:`theforeman.foreman.foreman inventory plugin <theforeman.foreman.foreman#inventory>`
.. envvar:: FOREMAN_SSL_CERT

    X509 certificate to authenticate to Foreman if https is used

    *Used by:*
    :ansplugin:`theforeman.foreman.foreman callback plugin <theforeman.foreman.foreman#callback>`
.. envvar:: FOREMAN_SSL_KEY

    the corresponding private key

    *Used by:*
    :ansplugin:`theforeman.foreman.foreman callback plugin <theforeman.foreman.foreman#callback>`
.. envvar:: FOREMAN_SSL_VERIFY

    Toggle to decide whether to verify the Foreman certificate.

    It can be set to '1' to verify SSL certificates using the installed CAs or to a path pointing to a CA bundle.

    Set to '0' to disable certificate checking.

    *Used by:*
    :ansplugin:`theforeman.foreman.foreman callback plugin <theforeman.foreman.foreman#callback>`
.. envvar:: FOREMAN_URL

    URL of the Foreman server.

    *Used by:*
    :ansplugin:`theforeman.foreman.foreman callback plugin <theforeman.foreman.foreman#callback>`,
    :ansplugin:`theforeman.foreman.foreman inventory plugin <theforeman.foreman.foreman#inventory>`
.. envvar:: FOREMAN_USER

    Username accessing the Foreman server.

    *Used by:*
    :ansplugin:`theforeman.foreman.foreman inventory plugin <theforeman.foreman.foreman#inventory>`
.. envvar:: FOREMAN_USERNAME

    Username accessing the Foreman server.

    *Used by:*
    :ansplugin:`theforeman.foreman.foreman inventory plugin <theforeman.foreman.foreman#inventory>`
.. envvar:: FOREMAN_VALIDATE_CERTS

    Whether or not to verify the TLS certificates of the Foreman server.

    *Used by:*
    :ansplugin:`theforeman.foreman.foreman inventory plugin <theforeman.foreman.foreman#inventory>`
